--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,3 @@
-
-
 <% if @article.errors.any? %>
 <h2> Please fix the following errors:</h2>
  <ul>
@@ -9,19 +7,37 @@
  </ul>
 <% end %>
 
-<%= form_for @article do |variablename| %>
-    <p>
-      <%= variablename.label :title %> <br/>
-      <%= variablename.text_field :title %>
-    </p>
-    <p>
-      <%= variablename.label :description %> <br/>
-      <%= variablename.text_area :description %>
-    </p>
-    <p>
-      <%= variablename.submit %>
-    </p>
-
-<% end %>
-
-<%= link_to "Back to Index", articles_path %>
+<div class='row'>
+  <div class='col-xs-12'>
+      <%= form_for @article, html: {class: "form-horizontal", role: "form"} do |variablename| %> 
+      
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <%= variablename.label :title%>
+          </div>
+          <div class="col-sm-8">
+            <%= variablename.text_field :title, class: "form-control", placeholder: "Title", autofocus: true  %>
+          </div>
+        </div>
+        
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <%= variablename.label :description %> 
+          </div>
+          <div class="col-sm-8">
+            <%= variablename.text_area :description, rows: 10, class: "form-control", placeholder: "Body" %>
+          </div>
+        </div>
+          
+        <div class="form-group">
+           <div class="col-sm-offset-2 col-sm-10">
+            <%= variablename.submit class:'btn btn-primary btn-md' %>
+          </div>
+        </div>
+      
+      <% end %>
+      <div class="col-xs-4 col-xs-offset-4">
+       [ <%= link_to "Cancel and return to Index", articles_path %> ]
+      </div>
+  </div>
+</div>
