Add style to SHOW template

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,15 @@ $navbar-default-bg:  #A9A9A9;
   background-color: maroon;
 }
 
+.article-actions {
+  border-top:  1px solid #eaeaea;
+  padding-top:  5px;
+}
+
+.description {
+  margin-top:  0;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
@@ -55,6 +64,7 @@ footer ul li {
   float: left;
   margin-left: 15px;
 }
+
 footer ul {
   float: right;
   list-style: none;
