--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,11 @@ $navbar-default-bg:  #A9A9A9;
   background-color: maroon;
 }
 
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
+
 .article-actions {
   border-top:  1px solid #eaeaea;
   padding-top:  5px;
