--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,6 +9,10 @@
           </div>
           <div class="article-body">
             <%= truncate(stuff.description, length: 100) %>
+              <div class="article-meta-details">
+                <small> Created by: <%= stuff.user.username if stuff.user%>, <%= time_ago_in_words(stuff.created_at) %> ago, 
+                  last updated: <%= time_ago_in_words(stuff.updated_at) %>. </small>
+              </div>
           </div>
           <div class="article-actions">
             <%= link_to "Edit", edit_article_path(stuff), class: "btn btn-xs btn-primary" %>
