--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
 <div class="center jumbotron">
   <h1>Alpha Blog!</h1>
-<%= link_to 'Sign Up Now', about_path, class: "btn btn-danger btn-lg btn-what" %>
+<%= link_to 'Sign Up Now', signup_path, class: "btn btn-danger btn-lg btn-what" %>
 </div>
