--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,6 +66,11 @@ $navbar-default-bg:  #A9A9A9;
   padding:  15px;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
