--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,11 @@
 <h1 align="center">List of all articles</h1>
-
+<div align="center">
+    <%= will_paginate %>
+</div>
 <%= render 'article', obj: @articles %>
-    
+<div align="center">
+    <%= will_paginate %>
+</div>
   
-<p></p>
-<p></p>
-<p>
 <%= link_to 'Home', root_path %>
 </p>
