--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,10 +12,12 @@
                   last updated: <%= time_ago_in_words(stuff.updated_at) %>. </small>
               </div>
           </div>
-          <div class="article-actions">
-            <%= link_to "Edit", edit_article_path(stuff), class: "btn btn-xs btn-primary" %>
-            <%= link_to "DELETE", article_path(stuff), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-xs btn-danger" %>
-          </div>
+          <% if logged_in? && current_user == stuff.user %>
+            <div class="article-actions">
+              <%= link_to "Edit", edit_article_path(stuff), class: "btn btn-xs btn-primary" %>
+              <%= link_to "DELETE", article_path(stuff), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-xs btn-danger" %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
