--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,8 +18,10 @@
     <hr>
      <%= simple_format(@article.description) %>
      <div class="article-actions">
+       <% if logged_in? && current_user == @article.user %>
         <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>  <!-- use @article, because specifically this-->
         <%= link_to "DELETE", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-xs btn-danger" %>
+       <% end %>
         <%= link_to "Back to Index", articles_path, class: "btn btn-xs btn-success" %>
       </div>
   </div>
