--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,11 @@
           <li><%= link_to gravatar_for(blogger), user_path(blogger) %></li>
           <li class="article-title"><%=link_to blogger.username, user_path(blogger) %></li>
           <li><small><%= pluralize(blogger.articles.count, "article") if blogger.articles %></small></li>
+        <% if logged_in? and current_user.admin? %>
+          <li><%= link_to "Delete this user", user_path(blogger), method: :delete,
+          data: { confirm: "Are you sure you want to delete this user and their articles?" } %> </li>
+        <% end %>
+        
         </div>
       </div>
     </ul>
